<resources>
    <string name="app_name">Library Management System</string>
    <string name="title_home">Home</string>
    <string name="title_add_books">Add Books</string>
    <string name="title_view_students">Students Info</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_student_dashboard">Student_Dashboard</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_myBooks">My Books</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>