<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.librarymanagementsystem.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_books"
        android:name="com.example.librarymanagementsystem.ui.add_books.AddBooksFragment"
        android:label="@string/title_add_books"
        tools:layout="@layout/fragment_add_books" />

    <fragment
        android:id="@+id/navigation_view_students"
        android:name="com.example.librarymanagementsystem.ui.view_students.ViewStudentsFragment"
        android:label="@string/title_view_students"
        tools:layout="@layout/fragment_view_students" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.librarymanagementsystem.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_home_student"
        android:name="com.example.librarymanagementsystem.ui.home_student.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.librarymanagementsystem.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_mybooks"
        android:name="com.example.librarymanagementsystem.ui.mybooks.MyBooksFragment"
        android:label="@string/title_myBooks"
        tools:layout="@layout/fragment_mybooks" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.librarymanagementsystem.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>